--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "yiisoft/yii2": "~2.0.9",
-        "yiisoft/yii2-jui": "~2.0.0"
+        "yiisoft/yii2-jui": "~2.0.0",
+        "samdark/sitemap": "^2.0.7"
     },
     "autoload": {
         "psr-4": {
