--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "php": "^5.6 || ^7.0",
         "yiisoft/yii2": "~2.0.9",
         "yiisoft/yii2-jui": "~2.0.0",
-        "samdark/sitemap": "^2.0.7"
+        "samdark/sitemap": "^2.0.7",
+		"mobiledetect/mobiledetectlib": "^2.8",
+		"jaybizzle/crawler-detect": "1.*"
     },
     "autoload": {
         "psr-4": {
