--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "yiisoft/yii2-jui": "~2.0.0",
         "samdark/sitemap": "^2.0.7",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "jaybizzle/crawler-detect": "1.*"
+        "jaybizzle/crawler-detect": "1.*",
+        "ytubes/image-compressor": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
